[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/menus/settings/Settings.gd" type="Script" id=1]
[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui-bits/SelectSquare.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=4]
[ext_resource path="res://scenes/ui-bits/SubmenuBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/menus/settings/KeyPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui-bits/Alert.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui-bits/FullAlert.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "close"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 2, 2, 2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.01 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "open"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0.01 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.745098, 0.745098, 0.745098, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.878906, 0.878906, 0.878906, 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 1, 1, 1, 0.392157 )

[sub_resource type="Theme" id=14]
VScrollBar/styles/grabber = SubResource( 12 )
VScrollBar/styles/grabber_highlight = SubResource( 15 )
VScrollBar/styles/grabber_pressed = SubResource( 16 )
VScrollBar/styles/scroll = SubResource( 13 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 0.392157, 1, 1, 1, 0.509804 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 1024

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.133333, 1, 0.133333, 1, 0.27451, 1, 0.27451, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 300, 400 )
rect_clip_content = true
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/close = SubResource( 10 )
anims/open = SubResource( 11 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 40.0
margin_right = 443.0
margin_bottom = 754.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Content"]
margin_right = 500.0
margin_bottom = 65.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 4 )
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Content"]
margin_top = 85.0
margin_right = 500.0
margin_bottom = 710.0
rect_min_size = Vector2( 500, 625 )
rect_clip_content = false
mouse_filter = 2
theme = SubResource( 14 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="SelectSquare" parent="Content/ScrollContainer" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 0.0
options_path = NodePath("../Options")

[node name="Options" type="VBoxContainer" parent="Content/ScrollContainer"]
margin_right = 401.0
margin_bottom = 726.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Label" parent="Content/ScrollContainer/Options"]
margin_right = 401.0
margin_bottom = 19.0
text = "back"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="ColorRect" parent="Content/ScrollContainer/Options" groups=["selectsquare_ignore"]]
show_behind_parent = true
margin_top = 39.0
margin_right = 401.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 30 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/Graphics"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -8.5
margin_right = 361.0
margin_bottom = 8.5
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AntiAliasing" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 89.0
margin_right = 401.0
margin_bottom = 108.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/AntiAliasing"]
margin_right = 97.0
margin_bottom = 19.0
mouse_default_cursor_shape = 16
custom_colors/font_color = Color( 0.27451, 1, 0.27451, 1 )
text = "Anti-Aliasing"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/AntiAliasing"]
margin_left = 107.0
margin_right = 109.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Content/ScrollContainer/Options/AntiAliasing"]
margin_left = 119.0
margin_right = 401.0
margin_bottom = 19.0
text = "Smoothens out sharp lines (MSAA 8x)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloom" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 128.0
margin_right = 401.0
margin_bottom = 147.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Bloom"]
margin_right = 49.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.27451, 1, 0.27451, 1 )
text = "Bloom"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Bloom"]
margin_left = 59.0
margin_right = 61.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Content/ScrollContainer/Options/Bloom"]
margin_left = 71.0
margin_right = 353.0
margin_bottom = 19.0
text = "Makes bright parts of the screen glow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 167.0
margin_right = 401.0
margin_bottom = 186.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Fullscreen"]
margin_right = 79.0
margin_bottom = 19.0
mouse_default_cursor_shape = 16
custom_colors/font_color = Color( 0.27451, 1, 0.27451, 1 )
text = "Fullscreen"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Fullscreen"]
margin_left = 89.0
margin_right = 91.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Content/ScrollContainer/Options/Fullscreen"]
margin_left = 101.0
margin_right = 279.0
margin_bottom = 19.0
text = "Makes your window BIG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="ColorRect" parent="Content/ScrollContainer/Options" groups=["selectsquare_ignore"]]
show_behind_parent = true
margin_top = 206.0
margin_right = 401.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 30 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/Sound"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -8.5
margin_right = 361.0
margin_bottom = 8.5
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 256.0
margin_right = 401.0
margin_bottom = 275.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/MusicVolume"]
margin_right = 106.0
margin_bottom = 19.0
text = "Music Volume"

[node name="TextureProgress" type="TextureProgress" parent="Content/ScrollContainer/Options/MusicVolume"]
margin_left = 116.0
margin_right = 216.0
margin_bottom = 19.0
value = 100.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true
stretch_margin_right = 100

[node name="SFXVolume" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 295.0
margin_right = 401.0
margin_bottom = 314.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/SFXVolume"]
margin_right = 166.0
margin_bottom = 19.0
text = "Sound Effects Volume"

[node name="TextureProgress" type="TextureProgress" parent="Content/ScrollContainer/Options/SFXVolume"]
margin_left = 176.0
margin_right = 276.0
margin_bottom = 19.0
value = 100.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 8 )
nine_patch_stretch = true
stretch_margin_right = 100

[node name="Input" type="ColorRect" parent="Content/ScrollContainer/Options" groups=["selectsquare_ignore"]]
show_behind_parent = true
margin_top = 334.0
margin_right = 401.0
margin_bottom = 364.0
rect_min_size = Vector2( 0, 30 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/Input"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -8.5
margin_right = 361.0
margin_bottom = 8.5
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
text = "Input"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 384.0
margin_right = 401.0
margin_bottom = 403.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Up"]
margin_right = 241.0
margin_bottom = 19.0
text = "Move Up/Select Previous Option"

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Up"]
margin_left = 251.0
margin_right = 253.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Up"]
margin_left = 263.0
margin_right = 283.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Up"

[node name="Down" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 423.0
margin_right = 401.0
margin_bottom = 442.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Down"]
margin_right = 232.0
margin_bottom = 19.0
text = "Move Down/Select Next Option"

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Down"]
margin_left = 242.0
margin_right = 244.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Down"]
margin_left = 254.0
margin_right = 296.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Down"

[node name="Left" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 462.0
margin_right = 401.0
margin_bottom = 481.0
rect_pivot_offset = Vector2( -702.202, -279 )
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Left"]
margin_right = 75.0
margin_bottom = 19.0
text = "Move Left"

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Left"]
margin_left = 85.0
margin_right = 87.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Left"]
margin_left = 97.0
margin_right = 127.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Left"

[node name="Right" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 501.0
margin_right = 401.0
margin_bottom = 520.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Right"]
margin_right = 84.0
margin_bottom = 19.0
text = "Move Right"

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/Right/Title"]
margin_right = 40.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Right"]
margin_left = 94.0
margin_right = 96.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Right"]
margin_left = 106.0
margin_right = 145.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Right"

[node name="Slow" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 540.0
margin_right = 401.0
margin_bottom = 559.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Slow"]
margin_right = 78.0
margin_bottom = 19.0
text = "Slow Time"

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/Slow/Title"]
margin_right = 40.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Slow"]
margin_left = 88.0
margin_right = 90.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Slow"]
margin_left = 100.0
margin_right = 155.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Control"

[node name="Confirm" type="HBoxContainer" parent="Content/ScrollContainer/Options"]
margin_top = 579.0
margin_right = 401.0
margin_bottom = 598.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Content/ScrollContainer/Options/Confirm"]
margin_right = 110.0
margin_bottom = 19.0
text = "Shoot/Confirm"

[node name="Separator" type="ColorRect" parent="Content/ScrollContainer/Options/Confirm"]
margin_left = 120.0
margin_right = 122.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="Content/ScrollContainer/Options/Confirm"]
margin_left = 132.0
margin_right = 178.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 1, 1, 0.784314 )
text = "Space"

[node name="ApplyKeyBindings" type="Label" parent="Content/ScrollContainer/Options"]
margin_top = 618.0
margin_right = 401.0
margin_bottom = 637.0
custom_colors/font_color = Color( 1, 1, 0.27451, 1 )
text = "Apply Key Bindings"

[node name="BadStuff" type="ColorRect" parent="Content/ScrollContainer/Options" groups=["selectsquare_ignore"]]
show_behind_parent = true
margin_top = 657.0
margin_right = 401.0
margin_bottom = 687.0
rect_min_size = Vector2( 0, 30 )
color = Color( 1, 1, 1, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content/ScrollContainer/Options/BadStuff"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -8.5
margin_right = 361.0
margin_bottom = 8.5
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
text = "Dangerous Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetGame" type="Label" parent="Content/ScrollContainer/Options"]
margin_top = 707.0
margin_right = 401.0
margin_bottom = 726.0
custom_colors/font_color = Color( 1, 0.27451, 0.27451, 1 )
text = "Reset EVERYTHING"

[node name="KeyPopup" parent="." instance=ExtResource( 6 )]
visible = false

[node name="ResetConfirmation" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Alert" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="selected" from="Content/ScrollContainer/SelectSquare" to="." method="_on_SelectSquare_selected"]
[connection signal="update" from="Content/ScrollContainer/SelectSquare" to="." method="_on_SelectSquare_update"]
[connection signal="key_set" from="KeyPopup" to="." method="_on_KeyPopup_key_set"]
[connection signal="opened" from="KeyPopup" to="." method="_on_KeyPopup_opened"]
[connection signal="confirmed" from="ResetConfirmation" to="." method="_on_ResetConfirmation_confirmed"]
